--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,8 +8,10 @@
 
         <ion-item>
             <ion-label stacked>Password</ion-label>
-            <ion-input type="password"></ion-input>
+            <ion-input type="password" [(ngModel)]='password'></ion-input>
         </ion-item>
-        <button ion-button (click)="onLogin('true')" full>Login</button>
+        <button ion-button (click)="onLogin('foodRecycle')">Food Recycle</button>
+        <button ion-button (click)="onLogin('foodProducer')">Food Producer</button>
     </ion-list>
+    {{password}}
 </ion-content>
