--- a/src/pages/fooddetail/fooddetail.html
+++ b/src/pages/fooddetail/fooddetail.html
@@ -1,6 +1,12 @@
+<ion-header>
+    <ion-navbar>
+
+    </ion-navbar>
+
+</ion-header>
 <ion-content padding>
-    <ion-label>Name</ion-label>
-    <ion-label>Description</ion-label>
+    <ion-label>Name</ion-label>{{food.name}}
+    <ion-label>Description</ion-label>{{food.desc}}
     <ion-label>Ingredient</ion-label>
     <ion-label>Staleness Information</ion-label>
     <ion-item>
