--- a/src/pages/register-food/register-food.html
+++ b/src/pages/register-food/register-food.html
@@ -1,3 +1,11 @@
+<ion-header>
+    <ion-navbar>
+        <button ion-button (click)="goBack()">
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    </ion-navbar>
+
+</ion-header>
 <ion-content padding>
     <form>
         <ion-item>
